View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031372 | Open CASCADE | OCCT:Visualization | public | 2020-02-14 19:21 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031372: Visualization, TKOpenGl - failed to create texture on OpenGL ES 2.0 due to unknown GL_TEXTURE_BASE_LEVEL | ||||
Description | Texture creation fails on OpenGL ES 2.0 due to invalid enumeration error:TKOpenGl.OpenGL | Type: Error | ID: 1 | Severity: High | Message: GL_INVALID_ENUM in glTexParameter(pname=GL_TEXTURE_BASE_LEVEL) TKOpenGl | Type: Error | ID: 0 | Severity: High | Message: Error: 2D texture 409x409 IF: 6408 PF: 6408 DT: 5121 can not be created with error 1280. TKOpenGl | Type: Error | ID: 0 | Severity: High | Message: Error! Main FBO 409x409@0 initialization has failed This is because GL_TEXTURE_MAX_LEVEL and GL_TEXTURE_BASE_LEVEL have been introduced only by OpenGL ES 3.0, while within desktop they are available since very OpenGL 1.2. This is a REGRESSION after 0030700. | ||||
Steps To Reproduce | export MESA_GLES_VERSION_OVERRIDE=2.0 pload MODELING VISUALIZATION vgldebug 1 vcaps -maxVersion 2 0 vclear vinit View1 box b 1 2 3 vdisplay -dispMode 1 b vfit vviewcube vc | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31372 has been created by kgv. SHA-1: 0c7f96d34a3ef5f301a0b49b9617d670fde3ea7d Detailed log of new commits: Author: kgv Date: Fri Feb 14 19:29:51 2020 +0300 0031372: Visualization, TKOpenGl - failed to create texture on OpenGL ES 2.0 due to unknown GL_TEXTURE_BASE_LEVEL OpenGl_Sampler::applySamplerParams() has been corrected to check for OpenGL ES 3.0 when applying GL_TEXTURE_BASE_LEVEL/GL_TEXTURE_MAX_LEVEL parameters. |
|
Please raise trivial patch. |
|
Branch CR31372 has been updated forcibly by kgv. SHA-1: cd43c08f2b7be9b9ffd97c0eff04c5e3d629ef7b |
|
Fix has been tested in framework of IR-2020-02-22 Combination - OCCT branch : IR-2020-02-22 master SHA - 0950253ca6a21ca4d114a8743b4b9990ec0398be fe4497f3246e6bc1ced97ac331c148f0809ded15 Products branch : IR-2020-02-22 SHA - 7fcdb8a1da7b1467a779e4ef1bbb4b2746e6ffb8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17017.87000000002 / 17024.610000000095 [-0.04%] Products Total CPU difference: 12533.37000000014 / 12614.3600000001 [-0.64%] Windows-64-VC14: OCCT Total CPU difference: 18397.9375 / 18472.453125 [-0.40%] Products Total CPU difference: 14483.234375 / 14513.703125 [-0.21%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31372 has been deleted by inv. SHA-1: cd43c08f2b7be9b9ffd97c0eff04c5e3d629ef7b |
occt: master cd43c08f 2020-02-14 16:29:51 Details Diff |
0031372: Visualization, TKOpenGl - failed to create texture on OpenGL ES 2.0 due to unknown GL_TEXTURE_BASE_LEVEL OpenGl_Sampler::applySamplerParams() has been corrected to check for OpenGL ES 3.0 when applying GL_TEXTURE_BASE_LEVEL/GL_TEXTURE_MAX_LEVEL parameters. |
Affected Issues 0031372 |
|
mod - src/OpenGl/OpenGl_Context.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Sampler.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-02-14 19:21 | kgv | New Issue | |
2020-02-14 19:21 | kgv | Assigned To | => kgv |
2020-02-14 19:23 | kgv | Description Updated | |
2020-02-14 19:29 | git | Note Added: 0090525 | |
2020-02-14 19:32 | kgv | Note Added: 0090526 | |
2020-02-14 19:32 | kgv | Assigned To | kgv => bugmaster |
2020-02-14 19:32 | kgv | Status | new => resolved |
2020-02-14 19:32 | kgv | Status | resolved => reviewed |
2020-02-14 19:34 | kgv | Relationship added | child of 0030700 |
2020-02-14 19:35 | kgv | Description Updated | |
2020-02-17 14:02 | git | Note Added: 0090569 | |
2020-02-23 11:57 | bugmaster | Note Added: 0090628 | |
2020-02-23 11:57 | bugmaster | Status | reviewed => tested |
2020-02-23 12:00 | bugmaster | Test case number | => Not required |
2020-02-23 12:07 | kgv | Changeset attached | => occt master cd43c08f |
2020-02-23 12:07 | kgv | Assigned To | bugmaster => kgv |
2020-02-23 12:07 | kgv | Status | tested => verified |
2020-02-23 12:07 | kgv | Resolution | open => fixed |
2020-02-23 12:25 | git | Note Added: 0090655 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |